# cloudwatch-logs-handler

./: DESIGN.md  README.md  REQUEST.md  pyproject.toml  requirements-dev.txt  requirements.txt  template.yaml
scripts/: seed_dynamodb.py
src/log_monitor/: config.py  constants.py  exclusion.py  handler.py  log_searcher.py  metrics.py  notifier.py  state.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_config.py  test_exclusion.py  test_handler.py  test_log_searcher.py  test_metrics.py  test_notifier.py  test_state.py
